--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 .main-header {
@@ -29,8 +31,13 @@
   /*justify-content: space-around;*/
 }
 
+.about-details {
+  width: 30%;
+  margin: auto;
+}
+
 .bg-img {
-  height: 40%;
+  height: 100px;
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -45,4 +52,65 @@
 
 .about-us3-img {
   background-image: url('assets/1-3.jpg');
+}
+
+.about-columns-img {
+  height: 200px;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.about-us4-img {
+  background-image: url('assets/2-1.jpg');
+}
+
+.about-us5-img {
+  background-image: url('assets/2-2.jpg');
+}
+
+.our-services-main {
+  background-image: url('assets/bg-2.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: table;
+  height: 300px;
+  width: 100%;
+}
+
+.our-services-main p {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.our-services-columns {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.column {
+  height: 300px;
+  margin: 50px;
+  width: 35%;
+}
+
+.column-img {
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 150px;
+}
+
+.column1-img {
+  background-image: url('assets/4-1.jpg');
+}
+.column2-img {
+  background-image: url('assets/4-2.jpg');
+}
+
+.column3-img {
+  background-image: url('assets/4-3.jpg');
+}
+
+.column4-img {
+  background-image: url('assets/4-4.jpg');
 }
